<resources>
    <string name="app_name">connectwise</string>
    <string name="login">login</string>
    <string name="register_business_owner">Register Business Owner</string>
    <string name="register_intern">Register Intern</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
    <string name="bio">Bio</string>
    <string name="company_name">Company Name</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="industry">Industry</string>
    <string name="last_name">Last Name</string>
    <string name="location">Location</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="profile_image_url">Profile Image URL</string>
    <string name="back_button">back</string>
    <string name="logo">logo</string>
    <string name="education">Education</string>
    <string name="interests">Interests</string>
    <string name="intern_id">Intern ID</string>
    <string name="skills">Skills</string>
    <string name="nav_header_desc">nav_header_desc</string>
    <string name="meetings">Meetings</string>
    <string name="messaging">Messaging</string>
    <string name="webinars">Webinars</string>
    <string name="current_time">CurrentTime</string>
    <string name="add_a_note">Add a note...</string>
    <string name="welcome_business_owner">Welcome, Business Owner!</string>
    <string name="webinar_title">Webinar Title</string>
    <string name="date_and_time">Date and Time</string>
    <string name="description">Description</string>
    <string name="upcoming_webinars">Upcoming Webinars</string>
    <string name="intern_name">Intern Name</string>
    <string name="select_an_intern">Select an Intern</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="meeting_requests">Meeting Requests</string>
    <string name="home">home</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="intern_meeting_requests">Intern Meeting Requests</string>
    <string name="filter_by_date">Filter by Date</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_for_webinars">Sign up For Webinars</string>
    <string name="your_meetings">Your Meetings</string>
    <string name="chats">Chats</string>
</resources>