<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context=".RegisterBusinessOwnerActivity">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">



            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="wrap_content"
                android:layout_height="98dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:src="@drawable/smalllogo"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textViewHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_business_owner"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#9E9E9E"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#9E9E9E"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#9E9E9E"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#9E9E9E"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="#9E9E9E"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editTextProfileImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_image_url"
                android:inputType="textUri"
                android:minHeight="48dp"
                android:textColorHint="#9E9E9E"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editTextCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/company_name"
                android:minHeight="48dp"
                android:textColorHint="#9E9E9E"
                tools:ignore="TextFields,VisualLintTextFieldSize" />


            <EditText
                android:id="@+id/editTextIndustry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/industry"
                android:minHeight="48dp"
                android:textColorHint="#9E9E9E"
                tools:ignore="TextFields,VisualLintTextFieldSize"
                android:autofillHints="" />


            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:minHeight="48dp"
                android:textColorHint="#9E9E9E"
                tools:ignore="TextFields,VisualLintTextFieldSize"
                android:autofillHints="" />


            <EditText
                android:id="@+id/editTextBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""

                android:hint="@string/bio"
                android:minHeight="48dp"
                android:textColorHint="#9E9E9E"
                tools:ignore="TextFields,VisualLintTextFieldSize" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#3CBCBC"
                android:text="@string/register"
                android:textColor="#283593" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
